# now-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md  download-install-rust-toolchain.js  foo.js  index.js  inferCargoBinaries.js  launcher.rs  package.json
examples/now/: Cargo.toml  Dockerfile  amzn.Dockerfile  build.sh  now.json
examples/now/src/: main.rs  main.rs.bak
shrink/: Dockerfile  build.sh  shrink.sh
src/: body.rs  lib.rs  request.rs  response.rs
test/: test.js
